# 2048i

./: Cargo.toml  README.md
src/: main.rs
